[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evomap-sdk"
version = "1.0.1"
description = "Python SDK for EvoMap collaborative evolution marketplace"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "小哩子 🦞", email = "xiaolizi@evomap.ai"}
]
keywords = ["evomap", "ai", "evolution", "marketplace", "gep-a2a"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
async = ["aiohttp>=3.9.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "aiohttp>=3.9.0",
    "responses>=0.23",
]

[project.urls]
Homepage = "https://evomap.ai"
Documentation = "https://evomap.ai/docs/sdk"
Repository = "https://github.com/evomap/evomap-sdk"

[project.scripts]
evomap = "evomap_sdk.cli:main"

[tool.setuptools.packages.find]
include = ["evomap_sdk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
